# DocuRAG

./: .gitignore  Evaluate.py  Makefile  README.md  app.py  cli.py  demo.py  main.py  pyproject.toml  requirements.txt
src/: config.py  conversation_history.py  dataloader.py  rag_engine.py  retriever.py  vector_store.py
tests/: eval_questions.yaml
