[project]
name = "docu-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "docarray>=0.41.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "google-search-results>=2.4.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.21",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langsmith>=0.7.22",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
